# algotrading

./: .env.example  .gitignore  README.md  docker-compose.yml  env.exemple  ianalysis.ipynb  pyproject.toml  requirements.txt  run.py
app/: __init__.py
app/services/auth/: auth.py  authDto.py  authRn.py
app/services/db/: db.py  schema.sql
app/services/landingPage/: landingPage.py
app/services/mt5/: mt5.py
app/services/panel/: model.py  panel.py
app/services/socket/: socket.py
app/templates/: base.html
app/templates/auth/: login.html  register.html
app/templates/panel/: create_config.html
src/app/: __init__.py
src/app/services/auth/: auth.py
src/app/services/db/: db.py  schema.sql
src/app/services/ia/: AverageAndVolume.py
src/app/services/mt5/: mt5.py
src/app/services/orders/: orders.py
src/app/services/panel/: controller.py  model.py  panel.py
src/app/services/socket/: socket.py
src/app/static/: style.css
src/app/templates/: base.html
src/app/templates/auth/: login.html  register.html
src/app/templates/landingPage/: index.html
src/app/templates/orders/: create.html  index.html  update.html
src/app/templates/panel/: index.html  update.html
